# wild

./: .gitignore  Cargo.toml  justfile
libwild/: Cargo.toml
libwild/src/: archive.rs  args.rs  args_windows.rs  dwarf_address_info.rs  elf_writer.rs  file_writer.rs  input_data.rs  lib.rs  save_dir.rs
libwild/src/subprocess/: mod.rs  windows.rs
libwild/src/target_os/: mod.rs
wild/tests/: integration_tests.rs
windows/wlibwild/: Cargo.toml  w.just
windows/wlibwild/src/: lib.rs  subprocess.rs
