[package]
name = "wlibwild"
repository.workspace = true
license.workspace = true
version.workspace = true
readme.workspace = true
rust-version.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
bytemuck = { workspace = true }
bytesize = { workspace = true }
colored = { workspace = true }
indexmap = { workspace = true }
itertools = { workspace = true }
rayon = { workspace = true }
tracing = { workspace = true }
object = { workspace = true }
tracing-subscriber = { workspace = true, features = ["ansi"]}

[lints]
workspace = true
